--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
   <meta charset="UTF-8">
   <title>ElmHub</title>
   <script type="text/javascript" src="/elm.js"></script>
-
   <link rel="stylesheet" href="/style.css">
   <link rel="icon" type="image/png" href="/elm-hub.png">
 </head>
 
 <body>
+  <div id="elm-app"> </div>
 </body>
 
-<script type="text/javascript">
-  var app = Elm.Main.fullscreen();
-</script>
+<script type="text/javascript" src="/index.js"> </script>
 
 </html>
